# pullreq

./: .gitignore  README.md  ci-pipeline-github.yml  install.sh  pyproject.toml  pytest.ini
.github/workflows/: python-app.yml
src/pullreq/sparkSession/: __init__.py  spark_session.py
src/pullreq/task/: __init__.py  create_dumb_table.py
src/spark_session/: __init__.py
tests/: conftest.py  test_create_dumb_table.py
tests/task/: test_create_dumb_table.py
